fixed navbar and aligned developer page

--- a/Styles/mainStyle.css
+++ b/Styles/mainStyle.css
@@ -17,6 +17,9 @@ body{
     box-shadow:1px #808080;
     background-color:#17181b;
     color: #96a2b0;
+    display: flex;
+    justify-content:space-between;
+    
 }
 
     .Title > h1{
@@ -25,18 +28,17 @@ body{
 
 .Nav{
     list-style-type: none;
-    text-align: right;
     font-weight: bold;
     background-color:#17181b;
-    padding-bottom: 2%;
-    display: inline-block;
-    margin-left: 40%;
+    padding-top: 3%;
+    margin-right: 5%;
 }
 
     .Nav > a{
-        text-align: right;
         text-decoration: none;
         color: #96a2b0;
+        justify-self: center;
+        margin-left: 100px;
     }
 
 .header{
@@ -175,6 +177,8 @@ body{
         background-color: cornflowerblue;
         padding: 5%;
         color: #17181b;
+        display: flex;
+        justify-content: space-between;
     }
 
 #indexSkills{
@@ -269,26 +273,28 @@ body{
         display:inline-block;
     }
 
+    .project > span{
+        display: inline-block;
+        line-height: normal;
+        vertical-align: middle;
+    }
     
     .pImage{
-        width: 512px;
-        height: 320px;
+        width: 300px;
+        height: 400px;
         padding-top: 5%;
         display: inline-block;
     }
 
     .pImage > img{
         max-height: 100%;
-        max-width: 100%;
-        min-width:100%;
         min-height: 100%;
+    
     }
     
     .Description{
         text-align: right;
         font-size: 20px;
-        vertical-align: middle;
-        
     }
 
     .column-two{
